[gd_scene load_steps=4 format=3 uid="uid://cjyhqxpr4pbmf"]

[ext_resource type="Script" path="res://scenes/menus/level_menu/level_menu.gd" id="1_kvaf8"]
[ext_resource type="PackedScene" uid="uid://bvmk3ar4aosee" path="res://scenes/menus/color_label/color_label.tscn" id="2_0nd7c"]
[ext_resource type="PackedScene" uid="uid://givl2yrk2wso" path="res://scenes/menus/menu_label/menu_label.tscn" id="3_o1gq4"]

[node name="LevelMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(196, 40)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_right = 1.0
offset_bottom = 92.0
grow_horizontal = 0
size_flags_vertical = 3
mouse_filter = 0
script = ExtResource("1_kvaf8")

[node name="ColorLabel" parent="." instance=ExtResource("2_0nd7c")]
layout_mode = 2
text = "Level"

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuLabel" parent="Info" instance=ExtResource("3_o1gq4")]
layout_mode = 2

[node name="Back" type="Button" parent="Info"]
layout_mode = 2
mouse_filter = 1
text = "Main Menu"

[node name="HideButton" type="Button" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = "‚óè"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
